Fix CSRF when disabled

--- a/pynuts/templates/read.jinja2
+++ b/pynuts/templates/read.jinja2
@@ -1,6 +1,8 @@
 <dl>
   {% for field in obj.read_fields %}
-    <dt>{{ field.label.text }}</dt>
-    <dd>{{ field.data | safe }}</dd>
+    {% if field.widget.input_type != 'hidden' %}
+      <dt>{{ field.label.text }}</dt>
+      <dd>{{ field.data | safe }}</dd>
+    {% endif %}
   {% endfor %}
 </dl>
