--- a/pynuts/templates/create.jinja2
+++ b/pynuts/templates/create.jinja2
@@ -1,7 +1,6 @@
 <form method="post" enctype="multipart/form-data">
   {% for field in obj.create_form %}
-    {{1/0}}
-    {% if not field.hidden %}
+    {% if field.widget.input_type != 'hidden' %}
       {% if field.errors %}
         {{ field.label(class="error", title=', '.join(field.errors)) }}
       {% else %}
