--- a/pynuts/templates/update.jinja2
+++ b/pynuts/templates/update.jinja2
@@ -1,10 +1,12 @@
 <form method="post" enctype="multipart/form-data">
   {% for field in obj.update_form %}
-    {% if not field.flags.no_label %}
-      {% if field.errors %}
-        {{ field.label(class="error", title=', '.join(field.errors)) }}
-      {% else %}
-        {{ field.label() }}
+    {% if field.widget.input_type != 'hidden' %}
+      {% if not field.flags.no_label %}
+        {% if field.errors %}
+          {{ field.label(class="error", title=', '.join(field.errors)) }}
+        {% else %}
+          {{ field.label() }}
+        {% endif %}
       {% endif %}
     {% endif %}
     {{ field() | safe }}
